Remove unnecessary code. Add better typing annotations. Fix pixel alignment issues.

--- a/docs/src/components/Hero/SelectedLabel/styles.module.css
+++ b/docs/src/components/Hero/SelectedLabel/styles.module.css
@@ -5,8 +5,8 @@
 
 .selection {
   display: inline-block;
-  position: relative;
-  padding: 2px 10px 8px;
+  position: absolute;
+  padding: 3px 10px 8px;
   color: var(--swm-landing-heading-selected);
   line-height: 1;
   z-index: 1;
@@ -42,7 +42,7 @@
 }
 
 .preEnabledTextInteractivity {
-  margin-right: 30px;
+  margin-right: 24px;
 }
 
 @media (max-width: 768px) {
